# rpi-rover

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
prereqs/: install-crosscompiling-tools.sh  install-crosstool-ng.sh  install-docker.sh  install-toolchain.sh  install-tools.sh  install.sh
rover-api/: Cargo.toml  Makefile
rover-api/api-server/src/: controllers.rs  main.rs
rover-api/demo/: Cargo.toml
rover-api/demo/src/: main.rs
rover-api/ridecontrol/: Cargo.toml
rover-api/ridecontrol/src/: main.rs
rover-api/robohat/: Cargo.toml
rover-api/robohat-api/: Cargo.toml
rover-api/robohat/src/: lib.rs  robohat.rs
rover-api/rover/: Cargo.toml
rover-api/rover/src/: lib.rs
rover-api/util/src/: lib.rs  softpwm.rs
rover-driver/: .gitignore  Cargo.toml  Makefile
rover-driver/api-server/: Cargo.toml
rover-driver/api-server/src/: main.rs
rover-driver/driver/: Cargo.toml  Config.toml
rover-driver/driver/src/: main.rs  protocol.rs
rover-driver/libdriver/: Cargo.toml
rover-driver/libdriver-robohat/: Cargo.toml
rover-driver/libdriver-robohat/src/: robohat.rs
rover-driver/libdriver/src/: api.rs  client.rs  contract.rs  lib.rs  server.rs
rover-driver/libnetdriver/: Cargo.toml
rover-driver/libnetdriver/src/: client.rs  server.rs
rover-driver/libridecontrol/src/: controller.rs  lib.rs
rover-driver/librobohat/: Cargo.toml
rover-driver/librobohat/src/: lib.rs  robohat.rs
rover-driver/librover/: Cargo.toml
rover-driver/librover/src/: api.rs  lib.rs  util.rs
rover-driver/libutil/: Cargo.toml
rover-driver/libutil/src/: lib.rs  result.rs  softpwm.rs
rover-driver/netdriver/: Cargo.toml  Config.toml  log4rs.yml
rover-driver/netdriver/src/: logger.rs  main.rs
rover-driver/ridecontrol/: Cargo.toml
rover-driver/ridecontrol/src/: main.rs
rover-driver/util/: Cargo.toml
rover-driver/util/src/: lib.rs
rover-firmware/: Cargo.toml  Makefile
rover-firmware/api-http/: Cargo.toml  Config.toml
rover-firmware/api-http/src/: app.rs  look_api.rs  main.rs  move_api.rs  sense_api.rs  ws_api.rs
rover-firmware/api-net/: Cargo.toml  Config.toml  log4rs.yml
rover-firmware/api-net/src/: main.rs
rover-firmware/api-server/: Cargo.toml
rover-firmware/libapi-http/: Cargo.toml
rover-firmware/libapi-http/src/: api.rs
rover-firmware/libapi-net/: Cargo.toml
rover-firmware/libapi-net/src/: client.rs  contract.rs  lib.rs  server.rs
rover-firmware/libdriver/: Cargo.toml
rover-firmware/libdriver-robohat/: Cargo.toml
rover-firmware/libdriver-robohat/src/: lib.rs  robohat.rs
rover-firmware/libdriver/src/: api.rs  lib.rs
rover-firmware/libdriver/src/util/: a_sync.rs  asyncwrap.rs  mod.rs  splittable.rs
rover-firmware/libnetdriver/: Cargo.toml
rover-firmware/libnetdriver/src/: client.rs  contract.rs  lib.rs  server.rs
rover-firmware/libridecontrol/: Cargo.toml
rover-firmware/libridecontrol/src/: controller.rs
rover-firmware/libutil/: Cargo.toml
rover-firmware/libutil/src/: app.rs  helpers.rs  lib.rs  logger.rs  softpwm.rs  sys.rs
rover-firmware/libux-console/: Cargo.toml
rover-firmware/libux-console/src/: controller.rs
rover-firmware/libux-web/: Cargo.toml  README.md  index.html
rover-firmware/libux-web/app/: index.html
rover-firmware/libux-web/src/: app.rs  direction_control.rs  lib.rs  main.rs
rover-firmware/libux-web/src/components/: direction_control.rs  mod.rs  scene.rs  sensors_data.rs
rover-firmware/libux-web/src/js/: test.env.mjs
rover-firmware/libux-web/src/services/: mod.rs  rover_service.rs  rover_service_ws.rs
rover-firmware/netdriver/: Cargo.toml
rover-firmware/netdriver/src/: main.rs
rover-firmware/ridecontrol/: Cargo.toml
rover-firmware/ridecontrol/src/: main.rs
rover-firmware/ux-console/: Cargo.toml
rover-firmware/ux-console/src/: main.rs
rover-infra/: Makefile  docker-compose-build.yml  docker-compose-deploy.yml  docker-compose.yml  install-docker.sh
rover-infra/frontend/: Dockerfile  mime.types  nginx.conf
rover-infra/rover-api/: Dockerfile  Dockerfile.slow
rover-infra/rover-api-http/: Dockerfile
rover-infra/rover-api-net/: Dockerfile
rover-infra/rover-firmware/: Dockerfile  Dockerfile.slow
rover-infra/rover-http-api/: Dockerfile
rover-infra/rover-ux-console/: Dockerfile
rover-infra/rproxy/: Dockerfile  nginx.conf
rover-infra/rproxy/data/static/: index.html
rover-infra/servoblaster/: Dockerfile  locations.patch
rover-infra/video/: Dockerfile  run.sh
rover-infra/wifiap/: .gitignore  Dockerfile  dhcpd.template.conf  dnsmasq.template.conf  hostapd.template.conf  setup.sh
