[package]
name = "driver"
description = "Low-level TCP API server exposing simple controls of the rover."
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
config = "0.9"
log = "0.4"
log4rs = "0.9.0"
tokio = { version = "0.2.6", features = ["dns", "macros", "rt-core", "tcp"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
tokio-serde-cbor = { version = "0.4.0" }
libdriver = { path = "../libdriver" }
librobohat = { path = "../librobohat" }
librover = { path = "../librover" }