[package]
name = "libdriver"
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "0.2.6", features = ["dns", "tcp"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
tokio-serde-cbor = { version = "0.4.0" }
futures = "0.3.1"
librover = { path = "../librover" }