[package]
name = "api-http"
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
config = "0.9"
log = "0.4"
actix-web = "2.0"
actix-rt = "1.1.1"
serde = "1.0.114"
libapi-http = { path = "../libapi-http" }
libapi-net = { path = "../libapi-net" }
libdriver = { path = "../libdriver" }
libutil = { path = "../libutil" }
