[package]
name = "api-net"
description = "Low-level TCP API server exposing simple controls of the rover."
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
config = "0.14.0"
log = "0.4.20"
log4rs = "1.3.0"
tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio-serde-cbor = { version = "0.7.0" }
libdriver = { path = "../libdriver" }
libdriver-robohat = { path = "../libdriver-robohat" }
libapi-net = { path = "../libapi-net" }
libutil = { path = "../libutil" }
