[package]
name = "libapi-net"
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
async-trait = "0.1.77"
anyhow = "1.0.80"
log = "0.4.20"
either = "1.10.0"
tokio = { version = "1.36.0", features = ["default", "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
tokio-serde-cbor = { version = "0.7.0" }
libdriver = { path = "../libdriver" }

[features]
default = []
mock_client = ["dep:rand"]