[package]
name = "libdriver-robohat"
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2021"

[dependencies]
anyhow = "1.0.80"
rppal = "0.17.1"
thiserror = "1.0.57"
libdriver = { path = "../libdriver" }
libutil = { path = "../libutil", features = ["default", "softpwm"] }
