[package]
name = "libutil"
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2021"

[dependencies]
config = { version = "0.14.0", optional = true }
log = { version = "0.4.20", optional = true }
log4rs = { version = "1.3.0", optional = true }
rppal = { version = "0.17.1", optional = true }
thiserror = { version = "1.0.57", optional = true }

[features]
default = ["app"]
app = ["logger", "sys", "dep:config", "dep:log"]
logger = ["dep:log4rs"]
sys = []
softpwm = ["dep:rppal", "dep:thiserror", "dep:log"]
helpers = []