[package]
name = "libux-console"
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
termion = "1.5.1"
libdriver = { path = "../libdriver" }
libdriver-robohat = { path = "../libdriver-robohat" }

