[package]
name = "libux-web"
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2021"
description = "Web user experience for Rover control center."
repository = "https://github.com/vskh/rpi-rover"
license = "MIT"

[dependencies]
anyhow = "1.0.80"
log = "0.4.21"
serde = "1.0.197"
stylist = { version = "0.13.0", features = ["yew_integration"] }
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
#yewtil = "0.4.0"
libapi-http = { path = "../libapi-http" }
