[package]
name = "libux-web"
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2021"
description = "Web user experience for Rover control center."
repository = "https://github.com/vskh/rpi-rover"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.80"
futures = "0.3.30"
log = "0.4.21"
gloo-net = { version = "0.5.0", features = ["http"] }
serde = "1.0.197"
stylist = { version = "0.13.0", features = ["yew_integration"] }
wasm-bindgen = { version = "0.2.92" }
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.68", features = ["AbortController"] }
yew = { version = "0.21.0", features = ["csr"] }

libapi-http = { path = "../libapi-http" }
