[package]
name = "ux-console"
version = "0.1.0"
authors = ["Vadym S. Khondar <vadym@khondar.name>"]
edition = "2021"
description = "Raspberry Pi Rover command-line control interface."

[dependencies]
clap = {  version = "4.5.1", features = ["cargo"] }
tokio = { version = "1.36.0", features = ["default", "net", "macros", "rt-multi-thread"] }
libdriver = { path="../libdriver" }
libdriver-robohat = { path = "../libdriver-robohat" }
libapi-net = { path = "../libapi-net" }
libux-console = { path = "../libux-console" }
